# sseagentbuilder-swiftide

./: README.md  installsseabmcp.ps1
swiftide-files/: Cargo.toml
swiftide-files/examples/: Cargo.toml  hello_agents.rs
swiftide-files/examples/agentbuilder/: AgentRunner.rs  Cargo.toml  agent_build_system.rs  agent_builder_design.md  agent_builder_types.rs  agent_code_generator.rs  main.rs  port_allocator.rs  sse_manager.rs  sse_monitor.rs  sse_validator.rs
swiftide-files/swiftide/: Cargo.toml
swiftide-files/swiftide-core/: Cargo.toml
swiftide-files/swiftide-core/src/: node.rs
swiftide-files/swiftide-integrations/: Cargo.toml
swiftide-files/swiftide-integrations/src/: lib.rs
swiftide-files/swiftide-integrations/src/gemini/: mod.rs
swiftide-files/swiftide-integrations/src/groq/: mod.rs
swiftide-files/swiftide-integrations/src/lmstudio/: config.rs  mod.rs
swiftide-files/swiftide-integrations/src/openai/: mod.rs
